--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Javascript load data test</h2>
+
+<p id="demo">A Paragraph.</p>
+
+<button type="button" onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Paragraph changed.";
+}
+</script>
+
+</body>
+</html> 
