Change inclusion method

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!doctype html>
-<script type="module">
-  import {sayHi} from './say.js';
-
+<script src="say.js">
   document.body.innerHTML = sayHi('John');
 </script>
