--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
-<script src="say.js">
-  document.body.innerHTML = sayHi('John');
-</script>
+<body></body>
+<script src="say.js"></script>
+<script>document.body.innerHTML = sayHi('John');</script>
